[studio-ui] Misaligned issues when "Item Name" is long in some dashboards. #1398

--- a/ui/scss/temp.scss
+++ b/ui/scss/temp.scss
@@ -3131,7 +3131,7 @@ span.acn-canned-search {
       td {
         .anchorRow{
             display: inline-block;
-            max-width: calc(100% - 25px);
+            max-width: calc(100% - 45px);
             text-overflow: ellipsis;
             overflow: hidden;
             white-space: nowrap;
